# obsidian-fm

./: .gitfilter-repo-replace.txt  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: SPECS.md
src/obsidian_fm/: __init__.py  analyzer.py  cli.py  parser.py  scanner.py
tests/: __init__.py  test_analyzer.py  test_parser.py  test_scanner.py
tools/: purge_generated.ps1  rewrite_history_public.ps1
